<resources>

    <string name="app_name">AndroidTest</string>
    <string name="hello_world">Jauntly</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="back">back</string>
    <string name="forward">forward</string>
    <string name="awesomebar_default_text">Enter search or Address</string>
    <string name="reader_mode">Reader Mode</string>
    <string name="site_security">Security Level</string>
    <string name="stop">Stop</string>
    <string name="favicon">favicon</string>
    <string name="refresh">refresh</string>
    <string name="newtab">New Tab</string>
    <string name="menu">Menu</string>

</resources>